--- a/.docs/accessibility-corrections-analysis.html
+++ b/.docs/accessibility-corrections-analysis.html
@@ -342,7 +342,7 @@
                 <strong>src/pages/regulations-and-policies/index.tsx</strong> (line 32)<br>
                 <div class="code-block">
 &lt;h3 className={styles.TitleWithIcon} style={{ margin: "5px" }}&gt;
-  {capitalizeFirstLetter("REGULATIONS AND POLICIES")}
+  {capitalizeFirstLetter("Regulations and Policies")}
 &lt;/h3&gt;
                 </div>
                 <p><strong>Note:</strong> These pages use h3 because the h1 is implicitly in the HeroHeader component or in the dynamic WordPress content. The structure maintains an invisible h1 for SEO in the hero.</p>
